Add blScanner, blBuilder, blCounter — JavaFX desktop versions of the web apps
Native desktop rewrites of bScanner/bBuilder/bCounter: JavaFX drives the UI
while Spring Boot runs headless (DI/JPA/password hashing only). Same data
model and ~/pbss_data directories/databases as the web versions, fully
interchangeable with them. blCounter's Ballot Viewer screen embeds the
original, unmodified web Viewer in a JavaFX WebView against a small
127.0.0.1-only embedded server, rather than reimplementing it natively.

Original bScanner/bBuilder/bCounter are untouched — both versions can be
built and run side by side.

Also documents how to build/run and package (jlink + jpackage) the desktop
versions in README.md, including per-platform packaging notes.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>